Added another logo image to test dev branch

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <section class="header"></section>
 <section class="colorPalette">
   <h1 id="pageTopic">USPS styleguide</h1>
+  <div class="randomPic">
+    <img src="./images/Logo-dark.png">
+  </div>
   <h2 class="sectionHead">Primary Colors</h2>
   <div class="colorContainer">
     <div class="swatch darkBlue"></div>
